fix: correct gap

--- a/src/components/Languages/Languages.module.css
+++ b/src/components/Languages/Languages.module.css
@@ -14,7 +14,7 @@
 .list {
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
+  gap: 1.5rem;
 }
 
 .item {
